include/dps.h


struct dps_control_type {
    bool f_indexing;
    int error;
    int out;
    int problem;
    int print_level;
    int new_h;
    int taylor_max_degree;
    real_wp_ eigen_min;
    real_wp_ lower;
    real_wp_ upper;
    real_wp_ stop_normal;
    real_wp_ stop_absolute_normal;
    bool goldfarb;
    bool space_critical;
    bool deallocate_error_fatal;
    char problem_file[31];
    char symmetric_linear_solver[31];
    char prefix[31];
    struct sls_control_type sls_control;
};
struct dps_time_type {
    real_wp_ total;
    real_wp_ analyse;
    real_wp_ factorize;
    real_wp_ solve;
    real_wp_ clock_total;
    real_wp_ clock_analyse;
    real_wp_ clock_factorize;
    real_wp_ clock_solve;
};
struct dps_inform_type {
    int status;
    int alloc_status;
    int mod_1by1;
    int mod_2by2;
    real_wp_ obj;
    real_wp_ obj_regularized;
    real_wp_ x_norm;
    real_wp_ multiplier;
    real_wp_ pole;
    bool hard_case;
    char bad_alloc[81];
    struct dps_time_type time;
    struct sls_inform_type sls_inform;
};
void dps_initialize( void **data,
                     struct dps_control_type *control,
                     int *status );
void dps_read_specfile( struct dps_control_type *control,
                        const char specfile[] );
void dps_import( struct dps_control_type *control,
                 void **data,
                 int *status,
                 int n,
                 const char H_type[],
                 int ne,
                 const int H_row[],
                 const int H_col[],
                 const int H_ptr[] );
void dps_reset_control( struct dps_control_type *control,
                 void **data,
                 int *status );
void dps_solve_tr_problem( void **data,
                           int *status,
                           int n,
                           int ne,
                           real_wp_ H_val[],
                           real_wp_ c[],
                           real_wp_ f,
                           real_wp_ radius,
                           real_wp_ x[]  );
void dps_solve_rq_problem( void **data,
                           int *status,
                           int n,
                           int ne,
                           real_wp_ H_val[],
                           real_wp_ c[],
                           real_wp_ f,
                           real_wp_ power,
                           real_wp_ weight,
                           real_wp_ x[]  );
void dps_resolve_tr_problem( void **data,
                             int *status,
                             int n,
                             real_wp_ c[],
                             real_wp_ f,
                             real_wp_ radius,
                             real_wp_ x[] );
void dps_resolve_rq_problem( void **data,
                             int *status,
                             int n,
                             real_wp_ c[],
                             real_wp_ f,
                             real_wp_ power,
                             real_wp_ weight,
                             real_wp_ x[] );
void dps_information( void **data,
                      struct dps_inform_type *inform,
                      int *status );
void dps_terminate( void **data,
                    struct dps_control_type *control,
                    struct dps_inform_type *inform );